--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -6,6 +6,8 @@ on:
       - main
     paths:
       - data/**
+      - pack.mcmeta
+      - .github/workflows/**
 jobs:
   build-main:
     runs-on: ubuntu-latest
